gap fix

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -24,6 +24,15 @@
   .margin {
     width: 80vw;
     margin: 0 auto;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 140px;
+
+    @media (max-width: map-get($breakpoints, "mobileL")) {
+      gap: 50px;
+    }
   }
 
   .progressBar {
